<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                style="@style/TextView.Primary.Title"/>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/colorDivider"
              android:layout_marginBottom="16dp"
              android:layout_marginTop="16dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                style="@style/TextView.Primary.Dark"
                android:layout_marginBottom="16dp"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_info"
                style="@style/TextView.Primary.Dark"
                android:layout_marginBottom="16dp"
        />

        <ImageView
                android:id="@+id/image_button_github"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_github" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>